# unibo-hpc

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  remoteexec.sh
cmake/: config.cmake  setup.cmake
cmake/templates/: .clang-tidy  .clangd  Makefile
lib/: .clang-tidy
lib/HPC2526/: Makefile  README  arraySum.c  cache-stats.sh  cuda-hello0.cu  cuda-hello1.cu  cuda-image-rotate.cu  cuda-matmul.cu  cuda-multigpu.cu  cuda-reduction0.cu  cuda-reduction1.cu  cuda-reduction2.cu  cuda-reduction3.cu  cuda-reduction4.cu  cuda-rotate.cu  cuda-stencil1d-shared.cu  cuda-stencil1d.cu  cuda-vecadd1.cu  cuda-vecadd2.cu  cuda-vecadd3.cu  demo-cuda-tput.cu  demo-cuda-tput.ods  demo-cuda-tput.sh  demo-scaling.ods  demo-strong-scaling.sh  demo-weak-scaling.sh  game-of-life-new.c  game-of-life.c  gfx.c  gfx.h  matmul-test.c  matmul-test.py  matmul.c  matmul_test.java  mpi-async.c  mpi-get-count.c  mpi-hello.c  mpi-minloc.c  mpi-odd-even.c  mpi-odd-even2.c  (+68 more)
lib/lab/solutions/: cuda-anneal.cu  cuda-dot.cu  cuda-matsum.cu  cuda-odd-even.cu  cuda-reverse.cu  cuda-rule30.cu  mpi-mandelbrot.c  mpi-my-bcast.c  mpi-pi.c  mpi-ring.c  mpi-rule30.c  omp-brute-force.c  omp-c-ray.c  omp-cat-map.c  omp-dot.c  omp-letters.c  omp-merge-sort.c  omp-pi.c
scripts/: remote-exec
src/: main.c  main.cu
src/lab/cuda-anneal/: main.cu
src/lab/cuda-dot/: main.cu
src/lab/cuda-matsum/: main.cu
src/lab/cuda-odd-even/: main.cu
src/lab/cuda-reverse/: main.cu
src/lab/cuda-rule30/: main.cu
src/lab/mpi-mandelbrot/: main.c
src/lab/mpi-my-bcast/: main.c
src/lab/mpi-pi/: main.c
src/lab/mpi-ring/: main.c
src/lab/mpi-rule30/: main.c
src/lab/omp-brute-force/: main.c
src/lab/omp-c-ray/: main.c
src/lab/omp-cat-map/: main.c  rectime.main.c
src/lab/omp-cat-map/rectime/: main.c
src/lab/omp-dot/: main.c
src/lab/omp-letters/: main.c  the-hound-of-the-baskervilles.txt  war-and-peace.txt
src/lab/omp-merge-sort/: main.c
src/lab/omp-pi/: main.c
src/lab/omp-schedule/: main.c
src/utils/: sum.c  sum.h  sum.test.c
